Gold partners: add UPS

--- a/r2/r2/public/static/css/goldinfo.less
+++ b/r2/r2/public/static/css/goldinfo.less
@@ -309,13 +309,18 @@ section#about-gold, section#about-gold-partners {
         line-height: @section-height;
         margin: 0 45px;
         padding: 30px 25px;
-        border-bottom: 1px solid rgba(255,255,255,.65);
-        &.last {
-            border-bottom: none;
+        border-top: 1px solid rgba(255,255,255,.65);
+        &.first {
+            border-top: none;
+        }
+
+        &.ups {
+            border-bottom: 1px solid;
+            border-color: rgba(90, 63, 26, 0.7);
         }
 
         h1 {
-            font-size: 24px;
+            font-size: 2.2em;
             font-weight: normal;
             margin: 0;
             margin-bottom: .25em;
