Allow interest bar to size naturally.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6945,9 +6945,9 @@ body:not(.gold) .allminus-link {
 .sr-interest-bar {
     position: relative;
     background: #cee3f8 url(../snoo-upside-down.png) 15px top no-repeat;
+    padding: 5px;
     overflow: hidden;
     border: 1px solid #336699;
-    height: 90px;
     margin-bottom: 10px;
 }
 
