Normalize thumbnail heights.
The font size of the a.thumbnail element was causing inconsistent
vertical spacing across browsers. This tweak attempts to replace it with
a consistent 2px bottom margin.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3574,7 +3574,9 @@ form input[type=radio] {margin: 2px .5em 0 0; }
 
 .thumbnail {
     float: left; 
-    margin: 0px 5px; 
+    font-size: 0;
+    margin: 0 5px;
+    margin-bottom: 2px;
     overflow: hidden;
     width: 70px; 
 }
