PromoteLinkForm: wording change for creating additional campaigns.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -390,7 +390,7 @@ ${self.javascript_setup()}
           <ul>
             <li>${_("You will only be charged for the portion of your budget that is actually spent. Any unspent portion will be refunded.")}</li>
             <li>${_("By targeting, your ad will only appear in front of users who subscribe to the subreddit that you specify.")}</li>
-            <li>${_("You can only target one subreddit per campaign.  If you would like to submit to more than one subreddit, add a new campaign (its easy, you just fill this form out again).")}</li>
+            <li>${_("You can only target one subreddit per campaign. If you would like to submit to more than one subreddit, add a new campaign (its easy, you just fill this form out again by clicking the '+ add new' button on the top right of your dashboard).")}</li>
           </ul>
         </div>
 
