PromoteLinkForm: show total available impressions.

--- a/r2/r2/templates/promotelinkform.html
+++ b/r2/r2/templates/promotelinkform.html
@@ -309,7 +309,6 @@ ${self.javascript_setup()}
             <td class="prefright">
               ${error_field("BAD_BID", "bid", "div")}
               ${error_field("BID_LIVE", "bid", "div")}
-              ${error_field("OVERSOLD_DETAIL", "bid", "div")}
               $<input id="bid" name="bid" size="7" type="text"
                       class="rounded styled-input"
                       style="width:auto"
@@ -336,6 +335,8 @@ ${self.javascript_setup()}
             <th>${_("impressions")}</th>
               <td class="prefright">
                 <span class="impression-info"></span>
+                <span class="available-info"></span>
+                ${error_field("OVERSOLD_DETAIL", "bid", "div")}
               </td>
           </tr>
 
