Increase specificity of compressed link styles.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -720,7 +720,7 @@ ul.flat-vert {text-align: left;}
     overflow: hidden;
 }
 
-.compressed .midcol {
+.link.compressed .midcol {
     width: 15px;
     margin-right: 5px;
 }
@@ -1583,14 +1583,14 @@ a.star { text-decoration: none; color: #ff8b60 }
     text-align: right;
 }
 
-.compressed { margin-bottom: 5px; }
-.compressed .rank { margin-top: 10px; }
-.compressed .title { margin: -2px 0 3px }
-.compressed .score { color: #888888 }
-.compressed .score-placeholder { height: 3px }
-.compressed .subreddit { font-weight: bold }
-.compressed .tagline { display: inline; margin-right: 12px }
-.compressed .expando-button { display: none; }
+.link.compressed { margin-bottom: 5px; }
+.link.compressed .rank { margin-top: 10px; }
+.link.compressed .title { margin: -2px 0 3px }
+.link.compressed .score { color: #888888 }
+.link.compressed .score-placeholder { height: 3px }
+.link.compressed .subreddit { font-weight: bold }
+.link.compressed .tagline { display: inline; margin-right: 12px }
+.link.compressed .expando-button { display: none; }
 
 /* display the right score based on whether they've voted */
 .score.likes, .score.dislikes {display: none;}
