Spam filter settings: add "all" level
This level makes it so that all items of the chosen type submitted to
the subreddit will be filtered initially. This is useful for subreddits
that want to be extremely strict with their submissions, as well as for
many subreddits to be able to go into "lockdown" in the case of a raid
or something similar.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -3409,6 +3409,10 @@ form input[type=radio] {margin: 2px .5em 0 0; }
     background: transparent;
 }
 
+.pretty-form .delete-field td label + label {
+    margin-left: 2em;
+}
+
 #pref-delete textarea#delete-message {
     font-size: smaller;
     height: 5em;
