Mod log: add support for sticky/unsticky

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -6345,7 +6345,9 @@ body:not(.gold) .allminus-link {
 .modactions.wikicontributor,
 .modactions.removewikicontributor,
 .modactions.ignorereports,
-.modactions.unignorereports {
+.modactions.unignorereports,
+.modactions.sticky,
+.modactions.unsticky {
     height: 16px;
     width: 16px;
     display: block;
@@ -6421,6 +6423,12 @@ body:not(.gold) .allminus-link {
 }
 .modactions.unignorereports {
     background-image: url(../modactions_unmute.png); /* SPRITE */
+}
+.modactions.sticky {
+    background-image: url(../modactions_sticky.png); /* SPRITE */
+}
+.modactions.unsticky {
+    background-image: url(../modactions_unsticky.png); /* SPRITE */
 }
 
 .adminpasswordform {
