Language change to reddiquette on rules page

--- a/r2/r2/templates/rulespage.html
+++ b/r2/r2/templates/rulespage.html
@@ -105,7 +105,7 @@ function toggle_expando(elem){
     </ol>
   </div>
   <div id="followreddiquette" class="info">
-    <p>This last bit isn't a rule, but you should also be mindful of <a href="/wiki/reddiquette">&nbsp;reddiquette</a>, an&nbsp;<em>informal</em>&nbsp;expression of reddit's community values as written by the community itself. Please abide by it the best you can.</p>
+    <p>You should also be mindful of <a href="/wiki/reddiquette">&nbsp;reddiquette</a>, an&nbsp;<em>informal</em>&nbsp;expression of reddit's community values as written by the community itself. Please abide by it the best you can.</p>
   </div>
   <div class="info">
   <img id="brick" class="bottom" title="${_("here at reddit, we inscribe our rules on a brick. screw tablets.")}" alt="${_('this brick has no semantic value')}" src="${static('brick.png')}">
