Fix very minor wording error
Changed "the last you hear of us" to "the last you hear from us." Surely they'll hear of reddit again.

--- a/r2/r2/templates/optout.html
+++ b/r2/r2/templates/optout.html
@@ -27,7 +27,7 @@
     ${_("The address '%(email)s' will no longer receive email from us.") % dict(email=thing.email)}
   </p>
   <p>
-     ${_("A confirmation email has been queued up and should be reaching you shortly.  It will be the last you hear of us.")}
+     ${_("A confirmation email has been queued up and should be reaching you shortly.  It will be the last you hear from us.")}
    </p>
   %else:
    <p>
