Gold partners: remove i18n
These offers change occasionally, are only available in the US, other
parts of these pages aren't i18n, and phrases like "10% off" cause
issues with Babel, so it's just a lot simpler overall to drop this.

--- a/r2/r2/templates/goldpartnerspage.html
+++ b/r2/r2/templates/goldpartnerspage.html
@@ -70,97 +70,97 @@
                       css_class='large')}
 
     ${partner_item('backblaze',
-                   _("Claim your code below, then visit https://secure.backblaze.com/gift/XXXXXXX (replacing Xs with your code), and click 'Redeem &amp; Download' to install the product and enter your email/password."),
+                   "Claim your code below, then visit https://secure.backblaze.com/gift/XXXXXXX (replacing Xs with your code), and click 'Redeem &amp; Download' to install the product and enter your email/password.",
                    static('gold/partner-backblaze.png'), 
                    img_url='http://backblaze.com',
-                   description_md=_('# Backblaze Online Backup\n'
-                                    '3 months of free service (new accounts only).'),
+                   description_md='# Backblaze Online Backup\n'
+                                  '3 months of free service (new accounts only).',
                    button_dest='claim')}
 
     ${partner_item('bartsbakery',
-                   _("Claim your code below, then enter it as a Coupon code in your cart at http://bartsbakery.com to get 20% off any product."),
+                   "Claim your code below, then enter it as a Coupon code in your cart at http://bartsbakery.com to get 20% off any product.",
                    static('gold/partner-bartsbakery.png'), 
                    img_url='http://bartsbakery.com',
-                   description_md=_("# Bart's Bakery Chocolate Chip Cookies\n"
-                                    'Cookies. Really good cookies. 20% off any product.'),
+                   description_md="# Bart's Bakery Chocolate Chip Cookies\n"
+                                  'Cookies. Really good cookies. 20% off any product.',
                    extra_class='new',
                    button_dest='claim')}
 
     ${partner_item('betabrand',
-                   _("Claim your code below, then enter it as a Gift code in your cart at http://betabrand.com to get 20% off."),
+                   "Claim your code below, then enter it as a Gift code in your cart at http://betabrand.com to get 20% off.",
                    static('gold/partner-betabrand.png'), 
                    img_url='http://betabrand.com',
-                   description_md=_('# Betabrand Unique Online Fashions\n'
-                                    'Presently Pantless? Get 20% off any item in our collection.'),
+                   description_md='# Betabrand Unique Online Fashions\n'
+                                  'Presently Pantless? Get 20% off any item in our collection.',
                    extra_class='new',
                    button_dest='claim')}
 
     ${partner_item('empiremayo',
-                   _("Claim your code below, then use it during the second step of the checkout process at http://empiremayo.com."),
+                   "Claim your code below, then use it during the second step of the checkout process at http://empiremayo.com.",
                    static('gold/partner-empiremayo.png'),
                    img_url='http://empiremayo.com',
-                   description_md=_('# Empire Mayonnaise\n'
-                                    'Exquisite mayonnaises. 15% discount (two uses per customer).'),
+                   description_md='# Empire Mayonnaise\n'
+                                  'Exquisite mayonnaises. 15% discount (two uses per customer).',
                    button_dest='claim')}
 
     ${partner_item('goldbely',
-                   _("Use the button below to visit Goldbely, then click *their* button and follow the process to authorize them to verify your gold status."),
+                   "Use the button below to visit Goldbely, then click *their* button and follow the process to authorize them to verify your gold status.",
                    static('gold/partner-goldbely.png'),
                    img_url='http://goldbely.com',
-                   description_md=_('# Goldbely Food Explorers\n'
-                                    'Gourmet dishes, delivered. $20 off purchases of $50 or more.'),
+                   description_md='# Goldbely Food Explorers\n'
+                                  'Gourmet dishes, delivered. $20 off purchases of $50 or more.',
                    button_dest='https://www.goldbely.com/reddit-gold',
-                   button_label=_('visit Goldbely'))}
+                   button_label='visit Goldbely')}
 
     ${partner_item('ifixit',
-                   _("Claim your code below, then enter it as a Coupon Code in your cart at http://ifixit.com for $20 off a $50+ order."),
+                   "Claim your code below, then enter it as a Coupon Code in your cart at http://ifixit.com for $20 off a $50+ order.",
                    static('gold/partner-ifixit.png'),
                    img_url='http://ifixit.com',
-                   description_md=_('# iFixit\n'
-                                    'Guides, parts and tools for repairs. $20 off purchases of $50 or more.'),
+                   description_md='# iFixit\n'
+                                  'Guides, parts and tools for repairs. $20 off purchases of $50 or more.',
                    extra_class='new',
                    button_dest='claim')}
 
     ${partner_item('outgrowme',
-                   _("Claim your code below, then use it during the second step of the checkout process at http://outgrow.me/gold."),
+                   "Claim your code below, then use it during the second step of the checkout process at http://outgrow.me/gold.",
                    static('gold/partner-outgrowme.png'),
                    img_url='http://outgrow.me/gold',
-                   description_md=_('# Outgrow.me Marketplace\n'
-                                    'Successful crowd-funded items. 15% discount.'),
+                   description_md='# Outgrow.me Marketplace\n'
+                                  'Successful crowd-funded items. 15% discount.',
                    extra_class='new',
                    button_dest='claim')}
 
     ${partner_item('redditgifts',
-                   _("Watch your reddit PMs to see if you're one of the lucky Golden Tikkit recipients!"),
+                   "Watch your reddit PMs to see if you're one of the lucky Golden Tikkit recipients!",
                    static('gold/partner-redditgifts.png'), 
                    img_url='http://redditgifts.com',
-                   description_md=_('# redditgifts marketplace\n'
-                                    'With our "Golden Tikkit" program, five lucky gold members will be getting a t-shirt and 3 months of redditgifts Elves every week.'),
+                   description_md='# redditgifts marketplace\n'
+                                  'With our "Golden Tikkit" program, five lucky gold members will be getting a t-shirt and 3 months of redditgifts Elves every week.',
                    extra_class='new')}
 
     ${partner_item('uber',
-                   _("Claim your code below, then visit http://uber.com/app and enter the code while signing up."),
+                   "Claim your code below, then visit http://uber.com/app and enter the code while signing up.",
                    static('gold/partner-uber.png'),
                    img_url='http://uber.com',
-                   description_md=_('# Uber Private Car Service\n'
-                                    'Black car service requested via mobile app. $25 off your first ride (valid only in the US).'),
+                   description_md='# Uber Private Car Service\n'
+                                  'Black car service requested via mobile app. $25 off your first ride (valid only in the US).',
                    extra_class='new',
                    button_dest='claim')}
 
     ${partner_item('uniqlo',
-                   _("Keep an eye on your reddit PMs, as once a week Uniqlo will be sending out a message to a lucky gold member. Redeem your free prize within 24 hours, and you'll be lookin' snazzy in no time!"),
+                   "Keep an eye on your reddit PMs, as once a week Uniqlo will be sending out a message to a lucky gold member. Redeem your free prize within 24 hours, and you'll be lookin' snazzy in no time!",
                    static('gold/partner-uniqlo.png'),
                    img_url='http://uniqlo.com/us/',
-                   description_md=_('# Uniqlo Clothing\n'
-                                    'With our "Golden Tikkit" program, one lucky gold member will be getting some sweet new digs from Uniqlo every week.'),
+                   description_md='# Uniqlo Clothing\n'
+                                  'With our "Golden Tikkit" program, one lucky gold member will be getting some sweet new digs from Uniqlo every week.',
                    )}
 
     ${partner_item('urbilis',
-                   _("Claim your code below, then use it during the second step of the checkout process at http://urbilis.com."),
+                   "Claim your code below, then use it during the second step of the checkout process at http://urbilis.com.",
                    static('gold/partner-urbilis.png'),
                    img_url='http://urbilis.com',
-                   description_md=_('# Urbilis Urban Gardening\n'
-                                    'Creative & elegant gardening solutions. $10 off purchases of $50 or more.'),
+                   description_md='# Urbilis Urban Gardening\n'
+                                  'Creative & elegant gardening solutions. $10 off purchases of $50 or more.',
                    button_dest='claim')}
 
     <section id="terms" class="etc last">
