Gold partners: Add Rover.com and SOL Republic

--- a/r2/r2/templates/goldinfopage.html
+++ b/r2/r2/templates/goldinfopage.html
@@ -124,6 +124,8 @@
           <li>${partner_item('outgrowme', 'crowd-funded commodities')}</li>
           <li>${partner_item('uber', 'chauffeur on-demand')}</li>
           <li>${partner_item('ifixit', 'technological rectifications')}</li>
+          <li>${partner_item('rover', 'canine accomodation')}</li>
+          <li>${partner_item('solrepublic', 'acoustic accoutrements')}</li>
         </ul>
     </section>
     ${feature_item('filter-all',
