Update contest mode help tooltip.

--- a/r2/r2/templates/linkcommentssettings.html
+++ b/r2/r2/templates/linkcommentssettings.html
@@ -35,7 +35,7 @@
 %endif
 
 %if thing.can_edit or thing.contest_mode:
-  &nbsp;<span class="help-hoverable" title="${_('contest mode randomizes sorting and hides scores. this feature is temporarily available to assist best of 2012 contests.')}">(?)</span>
+  &nbsp;<span class="help-hoverable" title="${_('contest mode randomizes comment sorting, hides scores, and collapses replies by default.')}">(?)</span>
 %endif
 
 %if thing.can_edit and thing.link.is_self:
