Add explanation on how to hide default listing chooser display.

--- a/r2/r2/templates/listingchooser.html
+++ b/r2/r2/templates/listingchooser.html
@@ -52,6 +52,7 @@
         <ul class="multis">
           ${section_items(thing.sections['sample'])}
         </ul>
+        <p>${_('to hide these samples, create a multi of your own:')}</p>
       </div>
     %endif
     <ul class="multis">
